# devpi

./: README.md  pyproject.toml  show-index.py
devpi-docker/: Dockerfile  config.yml  create_pypi_index.sh  docker-compose-dev.yaml  entrypoint.sh
